[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = "HW_12.2"
authors = ["Дмитрий Дрёмин <dremin.da24108292@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
